---------------------------------------------------------------------------------------------------

Changes:

- Changed logic behind the job-window because the lock-file deletion.
- Added ssh-command test inside expert-mode.
- Addes transcode bluray confirmend inside exper-mode.
- Added tracklist for bluray
- Added selection for destination-directory
- Added edit export-name
- Send back modified bluray paramters to OS-Part
- Added a parameter to OSBlurayExecuteList

Bugfixes:

- After a sucessful process the directory progress will be erased.
  This change was made inside all shell-scripts.
- Fixed type-error inside OSRemoveLock (fixed)
- By a few runs with bluray-chapter.sh I had sometimes not the 
  correct tracklist from bluray. (fixed)
 
---------------------------------------------------------------------------------------------------
Date : 07.17.2010 | Release : 0.6C-A10   | Author  : H.Weber | CVS:154-
---------------------------------------------------------------------------------------------------

Changes:

- Added Transcode inside expert-mode.
- Added ISO copy inside expert-mode.
- Added Rescue-copy inside expert-mode. 
- Added shell-script dvd-atrack.sh
- Added shell-script dvd-rescue.sh 
- Added description for shell-script rescue-copy
- Added global var __verbose__ inside default.py 
- Send back operation-state fron progress-bar function.
- Added file-manager into expert-mode.

Bugfixes:

- Secound error inside OSRemoveLock. (fixed)
- Timeout Value for Bluray fixed.
- problem with reading track list audio and subtitle (fixed)
- Testing addon against Dharma-freezed code.
- fixed a few small errors on the way to ALPHA-10 
- fixed a off by one error inside GetStageText.(fixed)
- If multiples passes are used only inside the 1.pass the % counter
  inside the progress-bar is visible.

---------------------------------------------------------------------------------------------------

















