@@ -65,7 +65,7 @@
         <string id="32123">Rescue-copy DVD to iso (confirmed)</string>
         <string id="32124">Reserved transcode & burning</string>      
         <string id="32125">Reserved network</string>
-        <string id="32126">Filemanager</string>
+        <string id="32126">Reserved user-scripts</string>
         <string id="32127">Test ssh connection</string>
         <string id="32128">Info</string>
         <string id="32129">Back</string>
