@@ -18,7 +18,7 @@ if [ $# -eq 5 ] ; then
    echo 5 arguments to dvd-handbrake.sh
    echo $1 $2 $3 $4 $5
    echo
-   ./dvd-handbrake.sh $1 $2 $3 $4 $5 >>$LOG 2>&1 &
+   ./dvd-handbrake.sh $1 $2 $3 $4 $5 >>$LOG 2>&1
 fi
 
 if [ $# -eq 7 ] ; then
@@ -26,7 +26,7 @@ if [ $# -eq 7 ] ; then
     echo 7 arguments to dvd-handbrake.sh
     echo $1 $2 $3 $4 $5 $6 $7
     echo
-    ./dvd-handbrake.sh $1 $2 $3 $4 $5 $6 $7 >>$LOG 2>&1 &
+    ./dvd-handbrake.sh $1 $2 $3 $4 $5 $6 $7 >>$LOG 2>&1
 fi
 
 if [ $# -eq 9 ] ; then
@@ -34,7 +34,7 @@ if [ $# -eq 9 ] ; then
    echo 9 arguments to dvd-handbrake.sh
    echo $1 $2 $3 $4 $5 $6 $7 $8 $9
    echo
-    ./dvd-handbrake.sh $1 $2 $3 $4 $5 $6 $7 $8 $9 >>$LOG 2>&1 &
+    ./dvd-handbrake.sh $1 $2 $3 $4 $5 $6 $7 $8 $9 >>$LOG 2>&1
 fi
 
 echo
